        * Model.pm: deprecated name_match parameter in accept
          specification. The regexp should now be specified as a
          key of a hash
        * model Debian::Dpkg::Control::Binary: Depends element specifies 
          Perl cargo class Config::Model::Debian::Dependency (see below)
        * Likewise for Debian::Dpkg::Control::Source Build-Depends*
        * Debian::Dependency: new class derived from Value to provide checks specific
          to Debian dependencies.


2010-12-08 Dominique Dumont  <domi.dumont@free.fr> 1.226

        * config-edit: mount fuse file system in the background. (like sshfs)
        * FuseUI: Improved doc
        * C::M::Backend::Fstab: improved doc

2010-12-06 Dominique Dumont  <domi.dumont@free.fr> 1.225

        * Build.PL: build depends on Test::Command 0.08 to avoid smoke test problems

2010-12-06 Dominique Dumont  <domi.dumont@free.fr> 1.224

        * Node AnyId Value: get() now accepts check parameter, autoadd parameter 
        * Node AnyId: added children method
        * Added Fuse interface: configuration tree is mapped to a virtual directory. 
          Use config-edit -ui fuse -fuse_dir some/where to use. 
          Stop with 'fusermount -u some/where'
        * Recommends Fuse (to be able to use fuse user interface)
        
2010-11-28 Dominique Dumont  <domi.dumont@free.fr> 1.223

        * Debian/Dpkg/Copyright: removed restrictions on copyright format
        * dist.ini: added build dependency on Probe::Perl (to run tests that invoke config-edit)
        * Model.pm: can now load model snippet from Foo.d directory. I.e. *.pl files found in Foo.d 
          are used to augment Foo model. This will be useful to agregate models coming from several
          teams. For instance any team can extends the Fstab model provided in this distribution.

2010-11-22 Dominique Dumont  <domi.dumont@free.fr> 1.222

	* bash-completion: fixed missing application option
	* Fstab model: specify '/etc' dir inst
