@@ -64,7 +64,12 @@ The archive area and section for each package should be specified in the package
                              'cargo' => {
                                           'value_type' => 'uniline',
                                           'type' => 'leaf',
-                                          warn_if_match => { 'perl.*\|\s*libmodule-build-perl' => 'lenny has perl 5.10 which includes libmodule-build-perl'},
+                                           warn_if_match => { 
+                                               'perl.*\|\s*libmodule-build-perl' => { 
+                                                    msg => 'lenny has perl 5.10 which includes libmodule-build-perl',
+                                                    fix => ' "perl" ;',
+                                                },
+                                            },
                                            class => 'Config::Model::Debian::Dependency',
                                        },
                              'type' => 'list'
@@ -74,8 +79,13 @@ The archive area and section for each package should be specified in the package
                              'cargo' => {
                                           'value_type' => 'uniline',
                                           'type' => 'leaf',
-                                          warn_if_match => { 'perl.*\|\s*libmodule-build-perl' => 'lenny has perl 5.10 which includes libmodule-build-perl'},
-                                          class => 'Config::Model::Debian::Dependency',
+                                          warn_if_match => { 
+                                              'perl.*\|\s*libmodule-build-perl' => { 
+                                                    msg => => 'lenny has perl 5.10 which includes libmodule-build-perl',
+                                                     fix => ' "perl" ;',
+                                                },
+                                            },
+                                         class => 'Config::Model::Debian::Dependency',
                                         },
                              'type' => 'list'
                            },
