@@ -1,6 +1,8 @@
         * Model.pm: deprecated name_match parameter in accept
           specification. The regexp should now be specified as a
-          key of a hash
+          key of a hash. 
+        * Value.pm: warn_if_match and warn_unless_match can speficy instructions to "fix"
+          the value.
         * model Debian::Dpkg::Control::Binary: Depends element specifies 
           Perl cargo class Config::Model::Debian::Dependency (see below)
         * Likewise for Debian::Dpkg::Control::Source Build-Depends*
